# binaryFileToQrCode

./: .gitmodules  ASCIIDataDecoder.cpp  ASCIIDataEncoder.cpp  CMakeLists.txt  Header.hpp  README.md  ScreenCapturing.cpp  TestASCIIDataGenerator.cpp  TimeMeasuring.hpp  build_host.sh  config.h
.github/workflows/: cmake.yml
GottenChunks/: 0.chk
QtApp/: BinaryFileToQrCodeWindow.cpp  BinaryFileToQrCodeWindow.h  CMakeLists.txt  main.cpp
TestData/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
